--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,10 @@ body {
         url("/assets/img/home-background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     min-width: 400px;
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
@@ -35,6 +39,7 @@ footer {
     width: -webkit-fill-available;
     margin-top: 5vw;
     bottom: 0px;
+
     .footer-notes {
         display: flex;
         justify-content: space-around;
@@ -48,9 +53,16 @@ footer {
 }
 
 @media only screen and (max-width: 900px) {
-    footer {
-        position: fixed;
-        bottom: 0;
+    body {
+        background: linear-gradient(
+                    to left top,
+                    rgba(0, 0, 0, 0.5),
+                    rgba(0, 0, 0, 0.5)
+                )
+                fixed,
+            url("/assets/img/home-background.jpg");
+        background-repeat: repeat;
+        background-size: cover;
     }
 }
 
